// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrentPrice /> should render component for Christmas Day 1`] = `
Object {
  "children": Array [
    <Text>
      Christmas Day
    </Text>,
    <Text>
      Wednesday
    </Text>,
    <View>
      <Text>
        Good To Go
      </Text>
      <Text>
        $3.40
      </Text>
    </View>,
    <View>
      <Text>
        Pay By Mail
      </Text>
      <Text>
        $5.40
      </Text>
    </View>,
    <Text>
      6 a.m. to 6:59 a.m.
    </Text>,
  ],
  "style": Object {
    "alignItems": "center",
    "backgroundColor": "yellow",
    "flex": 5,
    "justifyContent": "center",
    "width": "95%",
  },
}
`;

exports[`<CurrentPrice /> should render component for Monday 1`] = `
Object {
  "children": Array [
    undefined,
    <Text>
      Monday
    </Text>,
    <View>
      <Text>
        Good To Go
      </Text>
      <Text>
        $2.70
      </Text>
    </View>,
    <View>
      <Text>
        Pay By Mail
      </Text>
      <Text>
        $4.70
      </Text>
    </View>,
    <Text>
      10 a.m. to 1:59 p.m.
    </Text>,
  ],
  "style": Object {
    "alignItems": "center",
    "backgroundColor": "yellow",
    "flex": 5,
    "justifyContent": "center",
    "width": "95%",
  },
}
`;

exports[`<CurrentPrice /> should render component for Saturday 1`] = `
Object {
  "children": Array [
    undefined,
    <Text>
      Saturday
    </Text>,
    <View>
      <Text>
        Good To Go
      </Text>
      <Text>
        $1.40
      </Text>
    </View>,
    <View>
      <Text>
        Pay By Mail
      </Text>
      <Text>
        $3.40
      </Text>
    </View>,
    <Text>
      9 p.m. to 10:59 p.m.
    </Text>,
  ],
  "style": Object {
    "alignItems": "center",
    "backgroundColor": "yellow",
    "flex": 5,
    "justifyContent": "center",
    "width": "95%",
  },
}
`;

exports[`<CurrentPrice /> should render component for Wednesday 1`] = `
Object {
  "children": Array [
    undefined,
    <Text>
      Wednesday
    </Text>,
    <View>
      <Text>
        Good To Go
      </Text>
      <Text>
        $1.25
      </Text>
    </View>,
    <View>
      <Text>
        Pay By Mail
      </Text>
      <Text>
        $3.25
      </Text>
    </View>,
    <Text>
      Midnight to 4:59 a.m.
    </Text>,
  ],
  "style": Object {
    "alignItems": "center",
    "backgroundColor": "yellow",
    "flex": 5,
    "justifyContent": "center",
    "width": "95%",
  },
}
`;
